--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/fullPage.min.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="http://192.168.2.102:8080/target/target-script-min.js#anonymous"></script>
 </head>
 <!--[if lte IE 7]>      
 <body scroll="no"> 
@@ -238,8 +238,5 @@
 		
 	</ul>
 
-
-
-</script>
 </body>
 </html>
