--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		<div class="page page6">
             <div class="contain" id="block-wantMore">
                 <div class="container">
-                    <div class="row" style="text-align:center;margin-top:73%;">
+                    <div class="row" style="text-align:center;margin-top:38vh;">
                         <div class="col-md-12 telWay">
                             <p>快到碗里来：</p>
                             <a href="mailto:15521316296@163.com" hideFocus="true">15521316296@163.com</a>
