--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                     </div>
                     <div class="row">
                         <div class="companyDetail col-md-12 ">
-                            <h3>广州优游电子科技有限公司</h3>
-                            <p>2017.06 - 2017.08</p>
+                            <h3>美的集团</h3>
+                            <p>2017.09 - 至今</p>
                             <p>前端工程师</p>
-                            <p>负责优聚平台的应用的前端页面开发、交互设计；同时负责项目框架的搭建，研究一些新技术。</p>
+                            <p>作为小组长负责集团的人事系统前端页面开发、交互设计；同时负责项目框架的搭建，研究一些新技术。</p>
                         </div>
                     </div>
                 </div>
@@ -198,8 +198,8 @@
                             </div>
                         </div>
                         <div class="col-md-3" id="question">
-                            <p class="appName">天马宝</p>
-                            <p>为优聚平台下的应用。可以帮助用户查看账户资金流水并进行管理。</p>
+                            <p class="appName">HRMS-ihr</p>
+                            <p>为HRMS下的应用。可以帮助集团人事处理人事流程。</p>
                             
                         </div>
                     </div> 
